# myagents

./: .gitignore  README.md  cli.py  main.py  pyproject.toml  run_mcp_gate.py  run_mcpproxy.py  test.py
assets/: workflow.drawio
configs/: agents.json  agents_memory.json  sampling.json
datasets/GAOKAO-Math-Bench/: data-00000-of-00001.arrow  state.json
datasets/IMO25/: data.json
myagents/: DEV.md
myagents/core/: call_stack.py  factory.py  interface.py  message.py  state_mixin.py  step_counters.py  tools_mixin.py  workspace.py
myagents/core/agents/: __init__.py  base.py  memory.py  orchestrate.py  plan_and_exec.py  react.py  remote.py  types.py
myagents/core/configs/: agents.py  envs.py  llms.py  mcps.py  memories.py  workflows.py
myagents/core/envs/: __init__.py  base.py  complex_query.py  orchestrate.py  plan_and_exec.py  query.py  task.py
myagents/core/interface/: __init__.py  base.py  context.py  core.py  env.py  llm.py  logger.py  memory.py  message.py  prompt.py  task.py
myagents/core/llms/: __init__.py  config.py  dummy.py  openai.py  queue.py
myagents/core/memories/: __init__.py  lite.py  (+2 more)
myagents/mcps/: mcp_server.py  proxy.py  tavily.py  tavily_server.py
myagents/serves/: api.py
myagents/src/: factory.py  interface.py  message.py
myagents/tests/: mcp_client.py  test.py  test_benchmark.py  test_query.py
myagents/tools/: docs.py  test_docs.py
prompts/blueprint/: system.md
prompts/execute/: reason_act.md  reflect.md  system.md
prompts/orchestrate/: reason_act.md  reflect.md
prompts/plan/: reason_act.md  reflect.md  system.md
scripts/sample/: neg_sampling.py  sampling.py
scripts/tests/: raw_llm.py  run_test_milvus.py  test_benchmark.py  test_milvus_memory.py  test_orchestrate.py  test_query.py
(+75 files in other folders)
