[project]
name = "myagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "json-repair>=0.50.0",
    "loguru>=0.7.3",
    "mcp>=1.13.0",
    "openai>=1.102.0",
    "pip>=25.2",
    "pymilvus>=2.6.0",
    "sqlalchemy>=2.0.43",
]
